--- a/examples/astris/index.html
+++ b/examples/astris/index.html
@@ -5,7 +5,7 @@
     <title>Astris Game</title>
 </head>
 <body>
-<canvas id="game"></canvas>
-<script type="module" src="/src/main.ts"></script>
+<canvas id="canvas"></canvas>
+<script type="module" src="./src/main.ts"></script>
 </body>
 </html>
