--- a/examples/astris/index.html
+++ b/examples/astris/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8" />
     <title>Astris Game</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<div id="canvas-container" style="height: 100vh; width: 100vw"></div>
 <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
