--- a/examples/astris/index.html
+++ b/examples/astris/index.html
@@ -8,10 +8,16 @@
             margin: 0;
             padding: 0;
         }
+        canvas {
+            height: 100%;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
-<div id="canvas-container" style="height: 100vh; width: 100vw"></div>
+<div style="height: 100vh; width: 100vw; overflow: hidden">
+    <canvas id="three-scene"></canvas>
+</div>
 <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
